implement a bunch of things

--- a/package.json
+++ b/package.json
@@ -6,5 +6,28 @@
   "repository": "https://github.com/PerfectionCSGO/perfection-tv.git",
   "author": "perfection.tv <perfectioncsgo@gmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "build": "webpack --progress --config webpack.config.production",
+    "start": "webpack-dev-server --progress --open --config webpack.config.development",
+    "clean": "rimraf dist"
+  },
+  "dependencies": {
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "eslint": "^5.15.1",
+    "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.16.4",
+    "react-hot-loader": "^4.8.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
+  }
 }
