--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:jest/recommended"
   ],
   "parserOptions": {
     "ecmaFeatures": {
@@ -21,7 +22,7 @@
       "version": "detect"
     }
   },
-  "plugins": ["prettier", "react"],
+  "plugins": ["prettier", "react", "jest"],
   "rules": {
     "prettier/prettier": "error"
   }
