--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "webpack --progress --config webpack.config.production",
     "start": "webpack-dev-server --progress --open --config webpack.config.development",
     "clean": "rimraf dist",
+    "test": "jest",
     "prettier-check": "prettier \"**/*.{js,jsx,md,json}\" --list-different",
     "prettier-fix": "prettier \"**/*.{js,jsx,md,json}\" --write",
     "eslint-check": "eslint \"**/*.{js,jsx}\"",
@@ -18,8 +19,10 @@
     "eslint-compat": "eslint --print-config . | eslint-config-prettier-check"
   },
   "dependencies": {
+    "babel-jest": "^24.3.1",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-test-renderer": "^16.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -28,13 +31,37 @@
     "babel-loader": "^8.0.5",
     "eslint": "^5.15.1",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.3.1",
     "prettier": "^1.16.4",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
+  },
+  "jest": {
+    "bail": 1,
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/index.jsx"
+    ],
+    "coverageDirectory": "dist/coverage",
+    "coverageReporters": [
+      "cobertura",
+      "html",
+      "text-summary"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 75,
+        "functions": 75,
+        "lines": 75,
+        "statements": 75
+      }
+    }
   }
 }
