--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,9 @@
 {
+  "overrides": [
+    {
+      "files": [".prettierrc", ".stylelintrc", ".babelrc", ".eslintrc"],
+      "options": { "parser": "json" }
+    }
+  ],
   "singleQuote": true
 }
