--- a/package.json
+++ b/package.json
@@ -12,31 +12,45 @@
     "start": "webpack-dev-server --progress --open --config webpack.config.development",
     "clean": "rimraf dist",
     "test": "jest",
-    "prettier-check": "prettier \"**/*.{js,jsx,md,json}\" --list-different",
-    "prettier-fix": "prettier \"**/*.{js,jsx,md,json}\" --write",
+    "prettier-check": "prettier \"**/*.{js,jsx,md,json,css,scss}\" --list-different",
+    "prettier-fix": "prettier \"**/*.{js,jsx,md,json,scss}\" --write",
     "eslint-check": "eslint \"**/*.{js,jsx}\"",
     "eslint-fix": "eslint \"**/*.{js,jsx}\" --fix",
     "eslint-compat": "eslint --print-config . | eslint-config-prettier-check"
   },
   "dependencies": {
-    "babel-jest": "^24.3.1",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-test-renderer": "^16.8.4"
+    "react-dom": "^16.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.3.1",
     "babel-loader": "^8.0.5",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
     "eslint": "^5.15.1",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.3.1",
+    "jest-haste-map": "^24.3.1",
+    "jest-resolve": "^24.3.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.16.4",
+    "react-test-renderer": "^16.8.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "stylelint": "^9.10.1",
+    "stylelint-config-prettier": "^5.0.0",
+    "stylelint-prettier": "^1.0.6",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
