--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "start": "webpack-dev-server --progress --open --config webpack.config.development",
     "clean": "rimraf dist",
     "test": "jest",
-    "prettier-check": "prettier \"**/*.{js,jsx,md,json,css,scss}\" --list-different",
-    "prettier-fix": "prettier \"**/*.{js,jsx,md,json,scss}\" --write",
-    "eslint-check": "eslint \"**/*.{js,jsx}\"",
-    "eslint-fix": "eslint \"**/*.{js,jsx}\" --fix",
+    "prettier-check": "prettier \"**/*.{ts,tsx,md,json}\" --list-different",
+    "prettier-fix": "prettier \"**/*.{ts,tsx,md,json}\" --write",
+    "eslint-check": "eslint \"**/*.{ts,tsx}\"",
+    "eslint-fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "eslint-compat": "eslint --print-config . | eslint-config-prettier-check"
   },
   "dependencies": {
@@ -26,6 +26,11 @@
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
+    "@typescript-eslint/parser": "^1.5.0",
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
     "cross-env": "^5.2.0",
@@ -41,6 +46,7 @@
     "jest-resolve": "^24.5.0",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.8.6",
+    "typescript": "^3.3.4000",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
