--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "scripts": {
     "build": "webpack --progress --config webpack.config.production",
-    "start": "webpack-dev-server --progress --open --config webpack.config.development",
+    "start": "webpack-dev-server --progress --hot --open --config webpack.config.development",
     "clean": "rimraf dist",
     "test": "jest",
     "prettier-check": "prettier \"**/*.{ts,tsx,md,json}\" --list-different",
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "npm:@hot-loader/react-dom"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
@@ -45,6 +45,7 @@
     "jest-haste-map": "^24.5.0",
     "jest-resolve": "^24.5.0",
     "prettier": "^1.16.4",
+    "react-hot-loader": "^4.8.0",
     "react-test-renderer": "^16.8.6",
     "typescript": "^3.3.4000",
     "uglifyjs-webpack-plugin": "^2.1.2",
