--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
+  "plugins": ["react-hot-loader/babel"],
   "presets": [
     "@babel/preset-env",
     "@babel/preset-react",
-    "@babel/preset-typescript",
-    "react-hot-loader/babel"
+    "@babel/preset-typescript"
   ]
 }
