--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "prettier-fix": "prettier \"**/*.{ts,tsx,md,json}\" --write",
     "eslint-check": "eslint \"**/*.{ts,tsx}\"",
     "eslint-fix": "eslint \"**/*.{ts,tsx}\" --fix",
-    "eslint-compat": "eslint --print-config . | eslint-config-prettier-check"
+    "eslint-compat": "eslint --print-config . | eslint-config-prettier-check",
+    "stylelint-check": "stylelint \"./src/**/*.scss\"",
+    "stylelint-fix": "stylelint \"./src/**/*.scss\" --fix"
   },
   "dependencies": {
     "@hot-loader/react-dom": "npm:@hot-loader/react-dom",
@@ -28,8 +30,10 @@
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/jest": "^24.0.11",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
+    "@types/react-test-renderer": "^16.8.1",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
     "babel-jest": "^24.5.0",
@@ -48,6 +52,10 @@
     "prettier": "^1.16.4",
     "react-hot-loader": "^4.8.1",
     "react-test-renderer": "^16.8.6",
+    "stylelint": "^9.10.1",
+    "stylelint-config-prettier": "^5.0.0",
+    "stylelint-prettier": "^1.0.6",
+    "stylelint-scss": "^3.5.4",
     "typescript": "^3.4.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
@@ -59,8 +67,8 @@
     "bail": 1,
     "collectCoverage": true,
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!src/index.jsx"
+      "src/**/*.{ts,tsx}",
+      "!src/index/index.tsx"
     ],
     "coverageDirectory": "dist/coverage",
     "coverageReporters": [
