--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
     "eslint": "^5.15.3",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-jest": "^22.4.1",
@@ -49,13 +50,20 @@
     "jest": "^24.5.0",
     "jest-haste-map": "^24.5.0",
     "jest-resolve": "^24.5.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.16.4",
     "react-hot-loader": "^4.8.1",
     "react-test-renderer": "^16.8.6",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
     "stylelint-config-prettier": "^5.0.0",
     "stylelint-prettier": "^1.0.6",
     "stylelint-scss": "^3.5.4",
+    "terser-webpack-plugin": "^1.2.3",
     "typescript": "^3.4.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
