--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "dependencies": {
     "@hot-loader/react-dom": "npm:@hot-loader/react-dom",
     "react": "^16.8.6",
-    "react-dom": "npm:@hot-loader/react-dom"
+    "react-dom": "npm:@hot-loader/react-dom",
+    "react-router": "^5.0.0",
+    "react-router-config": "^5.0.0",
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
@@ -33,6 +36,8 @@
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
+    "@types/react-router-config": "^1.1.2",
+    "@types/react-router-dom": "^4.3.1",
     "@types/react-test-renderer": "^16.8.1",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
