react hooks, store, be smart about actions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "skipLibCheck": true,
     "noUnusedLocals": false,
     "noImplicitAny": true,
+    "experimentalDecorators": true,
     "module": "commonjs"
   },
   "include": ["./src/**/*"]
