--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
-  "plugins": ["react-hot-loader/babel"],
+  "plugins": [
+    "react-hot-loader/babel",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }]
+  ],
   "presets": [
-    "@babel/preset-env",
+    ["@babel/preset-env", { "useBuiltIns": "usage" }],
     "@babel/preset-react",
     "@babel/preset-typescript"
   ]
