--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@hot-loader/react-dom": "npm:@hot-loader/react-dom",
+    "mobx": "^5.9.4",
+    "mobx-react-lite": "^1.2.0",
     "react": "^16.8.6",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-router": "^5.0.0",
@@ -27,6 +29,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
