--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
     ["@babel/plugin-proposal-class-properties", { "loose": true }]
   ],
   "presets": [
-    ["@babel/preset-env", { "useBuiltIns": "usage" }],
+    ["@babel/preset-env", { "useBuiltIns": "usage", "corejs": "3" }],
     "@babel/preset-react",
     "@babel/preset-typescript"
   ]
