--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "perfection-tv",
   "version": "1.0.0",
   "description": "Website for perfection.tv",
-  "main": "src/index.js",
   "repository": "https://github.com/PerfectionCSGO/perfection-tv.git",
   "author": "perfection.tv <perfectioncsgo@gmail.com>",
   "license": "MIT",
@@ -12,13 +11,13 @@
     "start": "webpack-dev-server --progress --hot --open --config webpack.config.development",
     "clean": "rimraf dist",
     "test": "jest",
-    "prettier": "prettier \"**/*.{ts,tsx,md,json}\" --list-different",
-    "eslint": "eslint \"**/*.{ts,tsx}\"",
+    "prettier": "prettier \"**/*.{ts,tsx,js,md,json}\"",
+    "eslint": "eslint \"**/*.{ts,tsx,js}\"",
     "eslint-check": "eslint --print-config . | eslint-config-prettier-check",
     "stylelint": "stylelint \"./src/**/*.scss\""
   },
   "dependencies": {
-    "@hot-loader/react-dom": "npm:@hot-loader/react-dom",
+    "core-js": "^3.0.0",
     "mobx": "^5.9.4",
     "mobx-react-lite": "^1.2.0",
     "react": "^16.8.6",
@@ -31,7 +30,6 @@
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
@@ -55,12 +53,9 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.6.0",
-    "jest-haste-map": "^24.6.0",
-    "jest-resolve": "^24.6.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss-loader": "^3.0.0",
     "prettier": "^1.16.4",
     "react-hot-loader": "^4.8.2",
     "react-test-renderer": "^16.8.6",
@@ -72,15 +67,16 @@
     "stylelint-scss": "^3.5.4",
     "terser-webpack-plugin": "^1.2.3",
     "typescript": "^3.4.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
   },
   "jest": {
-    "bail": 1,
     "collectCoverage": true,
+    "moduleNameMapper": {
+      "\\.scss$": "identity-obj-proxy"
+    },
     "collectCoverageFrom": [
       "src/**/*.{ts,tsx}",
       "!src/index/index.tsx"
@@ -89,7 +85,7 @@
     "coverageReporters": [
       "cobertura",
       "html",
-      "text-summary"
+      "text"
     ],
     "coverageThreshold": {
       "global": {
