updating some logic

--- a/package.json
+++ b/package.json
@@ -7,93 +7,80 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "webpack --progress --config webpack.config.production",
-    "start": "webpack-dev-server --progress --hot --open --config webpack.config.development",
-    "clean": "rimraf dist",
-    "test": "jest",
-    "prettier": "prettier \"**/*.{ts,tsx,js,md,json}\"",
-    "eslint": "eslint \"**/*.{ts,tsx,js}\"",
-    "eslint-check": "eslint --print-config . | eslint-config-prettier-check",
-    "stylelint": "stylelint \"./src/**/*.scss\""
+    "build:clean": "rimraf ./dist",
+    "build:renderer:hot": "webpack-dev-server --progress --hot --open --config ./webpack.config.development",
+    "build:renderer": "webpack --progress --config ./webpack.config.production",
+    "build": "yarn build:clean && yarn build:renderer",
+    "ci": "yarn build:clean && yarn build:renderer && yarn eslint-check && yarn eslint && yarn prettier && yarn stylelint && yarn typedoc && yarn test",
+    "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check",
+    "eslint": "eslint \"./**/*.{ts,tsx}\"",
+    "prettier": "prettier --list-different \"./**/*.{tsx,jsx,ts,js,less,scss,css}\"",
+    "start": "yarn build:clean && yarn build:renderer:hot",
+    "stylelint": "stylelint \"./**/*.{scss,less,css}\"",
+    "test": "jest --config jestconfig.json",
+    "typedoc": "typedoc --out ./dist/documentation --excludeExternals --mode modules --module commonjs --target ES6 ./src"
   },
   "dependencies": {
-    "core-js": "^3.0.0",
+    "core-js": "^3.1.3",
     "mobx": "^5.9.4",
-    "mobx-react-lite": "^1.2.0",
+    "mobx-react-lite": "^1.4.0",
     "react": "^16.8.6",
     "react-dom": "npm:@hot-loader/react-dom",
-    "react-hot-loader": "^4.8.2",
+    "react-hot-loader": "^4.8.8",
     "react-router": "^5.0.0",
     "react-router-config": "^5.0.0",
     "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@types/jest": "^24.0.11",
-    "@types/react": "^16.8.12",
-    "@types/react-dom": "^16.8.3",
-    "@types/react-router-config": "^1.1.2",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-test-renderer": "^16.8.1",
-    "@typescript-eslint/eslint-plugin": "^1.6.0",
-    "@typescript-eslint/parser": "^1.6.0",
-    "babel-jest": "^24.7.1",
-    "babel-loader": "^8.0.5",
+    "@types/enzyme": "^3.9.3",
+    "@types/jest": "^24.0.13",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-config": "^5.0.0",
+    "@types/react-router-dom": "^4.3.2",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
     "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-jest": "^22.6.4",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.7.1",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "jest": "^24.8.0",
+    "jest-junit": "^6.4.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "prettier": "^1.16.4",
-    "react-test-renderer": "^16.8.6",
+    "prettier": "^1.17.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "stylelint": "^9.10.1",
-    "stylelint-config-prettier": "^5.0.0",
-    "stylelint-prettier": "^1.0.6",
-    "stylelint-scss": "^3.5.4",
-    "terser-webpack-plugin": "^1.2.3",
-    "typescript": "^3.4.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1",
+    "stylelint": "^10.0.1",
+    "stylelint-config-prettier": "^5.2.0",
+    "stylelint-prettier": "^1.1.1",
+    "stylelint-scss": "^3.7.0",
+    "terser-webpack-plugin": "^1.3.0",
+    "typedoc": "^0.14.2",
+    "typescript": "^3.5.1",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1",
     "webpack-merge": "^4.2.1"
   },
-  "jest": {
-    "collectCoverage": true,
-    "moduleNameMapper": {
-      "\\.scss$": "identity-obj-proxy"
-    },
-    "collectCoverageFrom": [
-      "src/**/*.{ts,tsx}",
-      "!src/index/index.tsx"
-    ],
-    "coverageDirectory": "dist/coverage",
-    "coverageReporters": [
-      "cobertura",
-      "html",
-      "text"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 75,
-        "functions": 75,
-        "lines": 75,
-        "statements": 75
-      }
-    }
+  "jest-junit": {
+    "suiteName": "Jest tests",
+    "output": "./dist/jest/test-results.xml"
   }
 }
