--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
-  "strict": true,
   "compilerOptions": {
+    "moduleResolution": "node",
     "jsx": "react",
     "experimentalDecorators": true,
-    "module": "commonjs"
+    "target": "esnext",
+    "esModuleInterop": true // Required to resolve: https://github.com/airbnb/enzyme/issues/1284
   }
 }
