--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,9 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "no-console": "off"
+    "no-console": "off",
+    "curly": "error",
+    "@typescript-eslint/explicit-function-return-type": "error"
   },
   "env": {
     "browser": true,
