--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,12 @@
 {
+  "printWidth": 120,
+  "singleQuote": true,
+  "jsxBracketSameLine": true,
+  "arrowParens": "always",
   "overrides": [
     {
       "files": [".prettierrc", ".stylelintrc", ".babelrc", ".eslintrc"],
       "options": { "parser": "json" }
     }
-  ],
-  "singleQuote": true
+  ]
 }
