--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.17",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.8.5",
