--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "core-js": "^3.2.0",
+    "lodash": "^4.17.15",
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
     "react": "^16.9.0",
@@ -40,6 +41,7 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.17",
+    "@types/lodash": "^4.14.136",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^4.3.4",
