--- a/package.json
+++ b/package.json
@@ -21,33 +21,33 @@
     "typedoc": "typedoc --out ./dist/documentation --excludeExternals --mode modules --module commonjs --target ES6 ./src"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.2.3",
     "core-js": "^3.2.1",
     "lodash": "^4.17.15",
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
     "react": "^16.9.0",
     "react-dom": "npm:@hot-loader/react-dom",
-    "react-hot-loader": "^4.12.13",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react-hot-loader": "^4.12.14",
+    "react-router": "^5.1.0",
+    "react-router-dom": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
+    "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.18",
-    "@types/lodash": "^4.14.138",
+    "@types/lodash": "^4.14.140",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^4.3.5",
-    "@typescript-eslint/eslint-plugin": "^2.3.0",
-    "@typescript-eslint/parser": "^2.3.0",
+    "@types/react-router": "^5.1.0",
+    "@types/react-router-dom": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "@typescript-eslint/parser": "^2.3.1",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "cross-env": "^6.0.0",
@@ -70,13 +70,13 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "stylelint": "^11.0.0",
-    "stylelint-config-prettier": "^5.2.0",
+    "stylelint-config-prettier": "^6.0.0",
     "stylelint-prettier": "^1.1.1",
-    "stylelint-scss": "^3.11.0",
-    "terser-webpack-plugin": "^2.1.0",
+    "stylelint-scss": "^3.11.1",
+    "terser-webpack-plugin": "^2.1.1",
     "typedoc": "^0.15.0",
     "typescript": "^3.6.3",
-    "webpack": "^4.40.2",
+    "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1",
     "webpack-merge": "^4.2.2"
