added normalization and more cleanup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React-App",
+  "name": "react-app",
   "version": "1.0.0",
   "description": "Basic website buildt with React/Mobx",
   "repository": "https://github.com/maik3y/React-App.git",
