--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-app",
+  "name": "oose-dt",
   "version": "1.0.0",
-  "description": "Basic website buildt with React/Mobx",
-  "repository": "https://github.com/maik3y/React-App.git",
-  "author": "<maikeysip@gmail.com>",
+  "description": "Casus OOSE-DT 2019-2020",
+  "repository": "https://github.com/maik3y/OOSE-DT.git",
+  "author": "<maikeysip@hotmail.com>, <nielshensen@hotmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
