--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Basic website buildt with React/Mobx",
   "repository": "https://github.com/maik3y/React-App.git",
-  "author": "<maikeysip@gmail.com>",
+  "author": "<maikeysip@hotmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
